feat(relatorio): implementa rota de relatório de transição de status (#18)
* feat(relatorio): implementa rota de relatório de transição de status de ordens de serviço

* docs: melhora descrição do parâmetro unit no swagger
